// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Component]: SearchBar render component with error style 1`] = `
<DocumentFragment>
  <div
    class="sc-bdfBwQ VfWiw"
  >
    <label
      class="sc-hKgILt bzdgky"
    />
    <div
      class="sc-gsTCUz hajpva"
    >
      <img
        alt=""
        height="24"
        src="test-file-stub"
        width="16"
      />
    </div>
    <input
      class="sc-dlfnbm ezvQpr"
      type="text"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`[Component]: SearchBar render the component 1`] = `
<DocumentFragment>
  <div
    class="sc-bdfBwQ VfWiw"
  >
    <label
      class="sc-hKgILt bzdgky"
    />
    <div
      class="sc-gsTCUz hajpva"
    >
      <img
        alt=""
        height="24"
        src="test-file-stub"
        width="16"
      />
    </div>
    <input
      class="sc-dlfnbm bNYnBR"
      type="text"
      value=""
    />
  </div>
</DocumentFragment>
`;
